k8s/prometheus/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
